:sparkles: :lipstick: :wrench: :heavy_plus_sign: :bug:
1. :sparkles: add register batch
1. :lipstick: format html showing
1. :wrench: add setting `SESSION_LIFETIME_MINUTES`
1. :heavy_plus_sign: xlrd and pypinyin
1. :bug: utils.py add flask_babel for `flash_errors`

--- a/recordit/templates/admin/index.html
+++ b/recordit/templates/admin/index.html
@@ -100,6 +100,8 @@
                                             {{ _('Teacher') }}</a>
                                         <a href="{{ url_for('admin.register_administrator') }}" class="botton-border">
                                             {{ _('Administrator') }}</a>
+                                        <a href="{{ url_for('admin.register_batch') }}" class="botton-border">
+                                            {{ _('Batch') }}</a>
                                     </div>
                                 </div>
                             </div>
