--- a/recordit/templates/base.html
+++ b/recordit/templates/base.html
@@ -153,64 +153,8 @@
                                     <img src="{{ url_for('static', filename='logo-white.png') }}" alt="Record it"></a>
                             </div>
                             <p class="footer-dec">
-                                Gravida pharetra netus quis eros dolor.
+                                Just click & submit.
                             </p>
-                            <ul class="footer-social-link">
-                                <li><a href="#"><i class="zmdi zmdi-facebook"></i></a></li>
-                                <li><a href="#"><i class="zmdi zmdi-rss"></i></a></li>
-                                <li><a href="#"><i class="zmdi zmdi-instagram"></i></a></li>
-                                <li><a href="#"><i class="zmdi zmdi-pinterest"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6  mt--60">
-                        <div class="footer-block">
-                            <h5>Quick Links</h5>
-                            <ul class="footer-list">
-                                <li><a href="#">Privacy Statement</a></li>
-                                <li><a href="#">Teaching Staff</a></li>
-                                <li><a href="#">Report Copyright</a></li>
-                                <li><a href="#">Community</a></li>
-                                <li><a href="#">Schedule</a></li>
-                                <li><a href="#">Discount Program</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mt--60">
-                        <div class="footer-block">
-                            <h5>Popular Courses</h5>
-                            <ul class="footer-courses">
-                                <li>
-                                    <div class="courses-nifo">
-                                        <h5><a href="#">Department of
-                                            Science.</a></h5>
-                                        <p>Duration : 4 Yr</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="courses-nifo">
-                                        <h5><a href="#">Combined With
-                                            a Handfull</a></h5>
-                                        <p>Duration : 2 Yr</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mt--60">
-                        <div class="footer-block">
-                            <h5>NEWSLETTER</h5>
-                            <div class="newsletter-wrap">
-                                <p>Enter your email and we'll send you more information of.</p>
-                                <div class="newsletter-input-box">
-                                    <form action="#">
-                                        <label>
-                                            <input type="text" placeholder="Your email address">
-                                        </label>
-                                        <button class="newsletter-button"><i class="zmdi zmdi-mail-send"></i></button>
-                                    </form>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -222,7 +166,7 @@
                     <div class="col-lg-12">
                         <div class="copy-right pt--10 pb--10 text-center text-white">
                             <p>&copy; 2019
-                                {{ render_link("NCUST-AI", "/", _('North China University of Science and Technology University AI Profession'), True) }}
+                                {{ render_link("NCUST-AI", "http://lxy.ncst.edu.cn/col/1436514565096/2017/09/04/1539159853923.html", _('North China University of Science and Technology University AI Profession'), True) }}
                                 /
                                 {{ render_link("Zero", "https://github.com/Zeroto521", "Written by Zeroto521", True) }}
                             </p>
